[gd_scene load_steps=12 format=3 uid="uid://dud4rqvt0phq0"]

[ext_resource type="Script" path="res://Turrets/turret.gd" id="1_3i4kh"]
[ext_resource type="PackedScene" uid="uid://bmhsjw6awokfi" path="res://Turrets/projectile.tscn" id="1_sjoc4"]
[ext_resource type="PackedScene" uid="uid://cggifi0q3127g" path="res://assets/Castle Meshes/Cannon.glb" id="3_c2l43"]
[ext_resource type="PackedScene" uid="uid://drgdpiv2tfs4s" path="res://assets/Castle Meshes/TurretBase.glb" id="4_1jmva"]

[sub_resource type="CylinderMesh" id="CylinderMesh_7a2kh"]
height = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_npy88"]
size = Vector3(0.4, 0.4, 0.4)

[sub_resource type="SphereMesh" id="SphereMesh_4ldlt"]

[sub_resource type="BoxMesh" id="BoxMesh_0tucu"]
size = Vector3(0.2, 0.2, 1)

[sub_resource type="Animation" id="Animation_n7cwh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretHead:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.3, 0)]
}

[sub_resource type="Animation" id="Animation_mvb85"]
resource_name = "Recoil"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretHead:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.3, 0), Vector3(0, 0.3, -0.6), Vector3(0, 0.3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_204oc"]
_data = {
"RESET": SubResource("Animation_n7cwh"),
"Recoil": SubResource("Animation_mvb85")
}

[node name="Turret" type="Node3D"]
script = ExtResource("1_3i4kh")
projectile = ExtResource("1_sjoc4")

[node name="TurretBase" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_7a2kh")

[node name="TurretHead" type="Node3D" parent="TurretBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="TurretBase/TurretHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.6)
mesh = SubResource("BoxMesh_npy88")

[node name="TurretTop" type="MeshInstance3D" parent="TurretBase/TurretHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0751399, 0)
mesh = SubResource("SphereMesh_4ldlt")
skeleton = NodePath("../..")

[node name="Cannon" parent="TurretBase/TurretHead" instance=ExtResource("3_c2l43")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35347, 0)

[node name="TurretBarrel" type="MeshInstance3D" parent="TurretBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0.8)
mesh = SubResource("BoxMesh_0tucu")
skeleton = NodePath("../TurretHead")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="RecoilAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_204oc")
}

[node name="TurretBase2" parent="." instance=ExtResource("4_1jmva")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
